--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "chart.js": "^4.4.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
+    "vue-chartjs": "^5.3.0",
     "vue-router": "^4.3.0",
     "vuetify": "^3.5.11",
     "vuex": "^4.1.0"
