--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.0.3",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
     "start-server-and-test": "^2.0.3",
     "typescript": "~5.4.0",
     "vite": "^5.1.6",
